kibana/kibana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:8.15.0
        ports:
        - containerPort: 5601
        volumeMounts:
        - name: elasticsearch-certs
          mountPath: /usr/share/kibana/config/certs
          readOnly: true
      volumes:
      - name: elasticsearch-certs
        secret:
          secretName: elasticsearch-master-certs
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: elasticsearch
spec:
  selector:
    app: kibana
  ports:
  - port: 5601
    targetPort: 5601
    nodePort: 30001  # You can specify a port in the NodePort range
  type: NodePort
